Fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ h1 {
 }
 
 button {
-    margin-top: 0px;
 }
 
 
@@ -54,12 +53,14 @@ button {
 }
 
 .game {
+    grid-area: "game";
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 5%;
     margin-right: 5%;
     width: 90%;
+    height: 100%;
 }
 /* rock */
 .rock {
@@ -137,6 +138,21 @@ button {
     
 }
 
+.scissors:disabled 
+{
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1fr;
+    height: 100%;
+    background-color: #b6fdfa;
+    box-shadow: 2px 2px 2px 2px #357e7a99;
+    border: solid transparent;
+    border-radius: 1px;
+    
+}
+
 
 @media screen and (max-width: 600px) {
     #scissors {
@@ -157,6 +173,7 @@ button {
     background-color: rgba(36, 122, 118, .3);
     transform: scale(1.1);
     transition: ease-in .2s;
+    height: 100%;
 }
 
 .paper:hover {
@@ -176,21 +193,26 @@ button {
     
     outline: 0;
     background-color: rgba(36, 122, 118, 1);
-    border-color:rgba(36, 122, 118, 1);    
+    border-color:rgba(36, 122, 118, 1);  
+    width: 1fr;
+    height: 100%;  
    
 }
 
 .paper:focus {
     outline: 0;
     background-color: rgba(36, 122, 118, 1);
-    border-color:rgba(36, 122, 118, 1);    
+    border-color:rgba(36, 122, 118, 1);   
+    width: 1fr;
+    height: 100%;   
 }
 
 .scissors:focus {
     outline: 0;
     background-color: rgba(36, 122, 118, 1);
     border-color:rgba(36, 122, 118, 1);    
-
+    width: 1fr;
+    height: 100%;  
 }
 
 /* class made for the JS counterpart "buttonClick();" */
@@ -234,9 +256,28 @@ p {
     font-family: 'Verdana';
     text-align: center;
     font-size: 30px;
+    margin: 2;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 18%, 60%, 22%;
+    grid-template-areas: 
+                    "game"
+                    "results"
+                    "prompt";
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+    
+@media screen and (max-width: 1200px) {
 .resultContainer {
+    grid-area: "results";
+    justify-self: center;
     display: grid;
     grid-gap: 0px;
     grid-template-columns: 25% 25% 25% 25%;
@@ -248,14 +289,51 @@ p {
             "text text";
             
     background-color: #347d79;
-    margin-bottom: 50px;
-    margin-top: 10px;
-    margin-left: 5%;
-    margin-right: 5%;
+    
     border-radius: 5px;
     box-shadow: 3px 3px 5px  rgba(0, 0, 0, .5);
-    height: 350px;
+    height: 20rem;
+    width: 80%;
+    
 }
+}
+
+@media screen and (min-width: 1201px) {
+    .resultContainer {
+        grid-area: "results";
+        justify-content: center;
+        justify-self: center;
+        display: grid;
+        grid-gap: 0px;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 15% 30% 15% 40%;
+        grid-template-areas: 
+                "round round",
+                "yourResults compResults",
+                "userScore compScore",
+                "text text";
+                
+        background-color: #347d79;
+        
+        
+        border-radius: 5px;
+        box-shadow: 3px 3px 5px  rgba(0, 0, 0, .5);
+        height: 20rem;
+        width: 50%;
+        margin-top: 15px;
+        
+    }
+    }
+
+    .result-container {
+        grid-area: "prompt";
+        width: 80%;
+        height: 100%;
+       
+        
+    
+    }
+
 @media screen and  (min-width: 601px) {
     
 
@@ -285,13 +363,14 @@ p {
     grid-area: "text";
     text-align: center;
     justify-content: center;
-    align-content: center;
+    align-self: baseline;
     grid-area: "box";
     color:  rgba(36, 122, 118, 1);
     font-size: 30px;
     grid-column: 1 / 5;
     width: 100%;
     height: 100%;
+    margin-top: 20px;
 
 }
 
@@ -326,17 +405,11 @@ p {
 
 }
 
-.result-container {
-    width: 80%;
-    margin: 10% 10%;
-    
 
-}
 
 .userScore {
     grid-area: "userScore";
-    justify-content: center;
-    align-content: center;
+    justify-self: center;
     color:rgba(182, 253, 250, .6);
     font-family: 'Verdana';
     text-align: center;
@@ -675,6 +748,8 @@ p {
         font-family: "Verdana";
         font-size: 35px;
         margin-bottom: 20px;
-        margin-top: 95px;
+        margin-top: 155px;
         
     }
+
+    
